--- a/src/index.css
+++ b/src/index.css
@@ -13,27 +13,18 @@
 
 
 .preSaleBgImage{
-  background: url(./assets/img/cardBg.png);
+  background-image: url(/static/img/cardBg.png);
   background-position:  center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-@media (max-width: 768px) {
-.preSaleBgImage {
-    background: url(./assets/img/mobileCardsBg.svg);
+.preSaleMbl {
+    background: url(/static/img/mobileCardsBg.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: scroll;
   }
-}
 
 
-footer{
-  background: url(./assets/img/footerBg.png);
-  background-position:  center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: scroll;
-}
