--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-#root {
+
+#root{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'CenturyGothic',;
+}
+
+body {
   background-color: #0F1320;
 }
 
